2019-02-08  Vladimir Makarov  <vmakarov@redhat.com>

PR middle-end/88560
	* lra-constraints.c (process_alt_operands): Don't increase reject
	for memory when offset memory is required.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@268705 138bc75d-0d04-0410-961f-82ee72b054a4